--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 authors = ["Daniel Bruce <dbruce1126@gmail.com>"]
 
 [dependencies]
+chrono = "0.4"
 csv = "1.0.0-beta.5"
 xcb = "0.8"
 
