--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,9 +4,11 @@ version = "0.1.0"
 authors = ["Daniel Bruce <dbruce1126@gmail.com>"]
 
 [dependencies]
-chrono = "0.4"
+chrono = { version = "0.4", features = ["serde"] }
 csv = "1.0.0-beta.5"
 xcb = "0.8"
+serde_derive = "1.0"
+serde = "1.0"
 
 [dependencies.i3ipc]
 version = "0.8.2"
